--- a/html/kms__keyring_8h.html
+++ b/html/kms__keyring_8h.html
@@ -121,6 +121,17 @@ $(function() {
 <area shape="rect" title=" " alt="" coords="1739,259,1879,285"/>
 </map>
 </div>
+</div><div class="textblock"><div id="dynsection-1" onclick="return toggleVisibility(this)" class="dynheader closed" style="cursor:pointer;">
+  <img id="dynsection-1-trigger" src="closed.png" alt="+"/> This graph shows which files directly or indirectly include this file:</div>
+<div id="dynsection-1-summary" class="dynsummary" style="display:block;">
+</div>
+<div id="dynsection-1-content" class="dyncontent" style="display:none;">
+<div class="center"><img src="kms__keyring_8h__dep__incl.png" border="0" usemap="#akms__keyring_8hdep" alt=""/></div>
+<map name="kms__keyring_8hdep" id="akms__keyring_8hdep">
+<area shape="rect" title=" " alt="" coords="20,5,127,32"/>
+<area shape="rect" href="kms__mrk__keyring_8h.html" title=" " alt="" coords="5,80,141,107"/>
+</map>
+</div>
 </div>
 <p><a href="kms__keyring_8h_source.html">Go to the source code of this file.</a></p>
 <table class="memberdecls">
